# rust_the_book

./: .gitignore  README.md
closure/: Cargo.toml
closure/src/: main.rs
collections/: Cargo.toml
collections/src/: main.rs
enum_example/: Cargo.toml
enum_example/src/: main.rs
errors/: Cargo.toml
errors/src/: main.rs
fibonacci/: Cargo.toml
fibonacci/src/: main.rs
generics/: Cargo.toml
generics/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
guessing_game_ng/: Cargo.toml
guessing_game_ng/src/: main.rs
hello_cargo/: Cargo.toml
hello_server/: Cargo.toml
hello_server/src/: lib.rs
largest/: Cargo.toml
lifetimes/: Cargo.toml
lifetimes/src/: main.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
panic/: Cargo.toml
panic/src/: main.rs
rectangles/: Cargo.toml
rectangles/src/: lib.rs  main.rs
rectangles/tests/: integration_test.rs
restaurant/: Cargo.toml
restaurant/src/: lib.rs  util.rs
restaurant/src/back_of_house/: cooking.rs
some_example/: Cargo.toml
some_example/src/: main.rs
state_pattern_oop/: Cargo.toml
state_pattern_oop/src/: main.rs
state_pattern_types/: Cargo.toml
state_pattern_types/src/: main.rs
string_slicing/: Cargo.toml
string_slicing/src/: main.rs
struct_example/: Cargo.toml
struct_example/src/: main.rs
temperature_convertor/: Cargo.toml
temperature_convertor/src/: main.rs
traits/: Cargo.toml
traits/src/: main.rs
twelve_days_of_christmas/: Cargo.toml
twelve_days_of_christmas/src/: main.rs
